--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
             <label for="password" class="password">Senha:</label>
             <input type="password" name="password" id="password">
 
-            <button class="btn-login">Entrar</button>
+            <button type="button" class="btn-login">Entrar</button>
             <p><a href=""></a></p>
         </form>
     </div>
